tests/ui/higher-ranked/trait-bounds/hrtb-identity-fn-borrows.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/hrtb-identity-fn-borrows.rs:14:5
   |
LL |     let y = f.call(&x);
   |                    -- `x` is borrowed here
LL |     x = 5;
   |     ^^^^^ `x` is assigned to here but it was already borrowed
...
LL |     drop(y);
   |          - borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
